# ReLIE

./: extract_candidates.py  generate_tesseract_results.py  inference.py  pyproject.toml  train.py
network/: dataset.py  model.py
relie/: config.py  document.py  prediction.py
relie/utils/: draw.py  operations.py  rect.py  text.py  word.py
utils/: config.py  xml_parser.py
