[tool.poetry]
name = "relie"
version = "0.1.0"
description = "Pytorch implementation of Paper by Google Research - Representation Learning for Information Extraction from Form-like Documents."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
torch = "^2.3.0"
tqdm = "^4.66.4"
dateparser = "^1.2.0"
pytesseract = "^0.3.10"
scikit-learn = "^1.4.2"
focal-loss-torch = "0.0.7"
tensorboard = "^2.16.2"
unidecode = "^1.3.8"
pydantic = "^2.7.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
poetry = "^1.8.3"
types-tqdm = "^4.66.0.20240417"
types-dateparser = "^1.2.0.20240420"
autopep8 = "^2.1.0"
types-regex = "^2024.5.10.20240512"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
